--- a/src/components/square.css
+++ b/src/components/square.css
@@ -2,10 +2,11 @@
     width: 2rem;
     height: 2rem;
     display: inline-block;
-    margin-top: -4px;
+    position: relative;
 }
 
 .square.food {
-    -webkit-box-shadow: 0 0 30px gold;
-    box-shadow:0 0 30px gold;
+    -webkit-box-shadow: 0 0 30px 2px gold;
+    -moz-box-shadow: 0 0 30px 2px gold;
+    box-shadow:0 0 30px 2px gold;
 }
